add: react-toastifyを追加

--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
     "electron-updater": "^6.3.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0"
+    "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@electron/rebuild": "^3.7.1",
