--- a/package.json
+++ b/package.json
@@ -113,7 +113,8 @@
     "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0"
+    "react-router-dom": "^7.3.0",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@electron/rebuild": "^3.7.1",
