--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "styled-components": "^6.1.17",
     "swr": "^2.3.3",
     "uuid": "^11.1.0"
   },
